:bug: Fix shop flags display on safari

--- a/public/styles/shop.styl
+++ b/public/styles/shop.styl
@@ -94,7 +94,6 @@
 			text-transform: uppercase
 
 			&-flag
-				display: flex
 				margin-top: .5rem
 
 				& img
